--- a/themes/hlcchl/sass/navigation/_menus.scss
+++ b/themes/hlcchl/sass/navigation/_menus.scss
@@ -1,101 +1,98 @@
-/* ------ New custom style from Morten's ------ */
-/* ------ large screens ------ */
-@media screen and (min-width: $query__medium) {
-	.menu-toggle {
-		display: none;
-	}
+/* ------ Large screens (> 800px) ------ */
+.menu-toggle {
+	display: none;
+}
 
-	.dropdown-toggle {
-    background-color: transparent;
-    border: none;
+.dropdown-toggle {
+  background-color: transparent;
+  border: none;
+}
+
+.main-navigation {
+	border-top: 1px solid $green;
+	.container {
+    width: 70%;
   }
-
-	.main-navigation {
-		border-top: 1px solid $green;
-		.container {
-	    width: 70%;
-	  }
-		ul {
-			display: flex;
-			justify-content: space-around;
-			flex-wrap: wrap;
-			margin: 0;
-			li {
-				display: inline;
-				font-family: 'Montserrat', 'Helvetica' , sans-serif;
-				text-transform: uppercase;
-				padding: 1.5em 0;
-				a {
-					color: $dark-grey;
-					padding: .4em .8em;
-					&:hover {
-		        text-decoration: none;
-		        color: $green;
-		        padding-top: 1.4em;
-		        border-top: 3px solid $green;
-		      }
-				}
-			}
-			li:nth-child(6) {
-		    position: relative;
-		    .dropdown-toggle {
-		      position: absolute;
-		      top: 23px;
-		      left: 115px;
-		    }
-		  }
-			li:nth-child(7) a {
-		    @include green-button-nav();
+	ul {
+		display: flex;
+		justify-content: space-around;
+		flex-wrap: wrap;
+		margin: 0;
+		li {
+			display: inline;
+			font-family: 'Montserrat', 'Helvetica' , sans-serif;
+			text-transform: uppercase;
+			padding: 1.5em 0;
+			a {
+				color: $dark-grey;
+				padding: .4em .8em;
 				&:hover {
-			    @include white-button-nav();
-			  }
-		  }
-			.current-menu-item {
-				color: $green;
-				padding-top: 1.375em;
-				margin-top: 0;
-				border-top: 2px solid $green;
-			}
-			ul {
-				display: none;
-				flex-direction: column;
+	        text-decoration: none;
+	        color: $green;
+	        padding-top: 1.4em;
+	        border-top: 3px solid $green;
+	      }
 			}
 		}
+		li:nth-child(6) {
+	    position: relative;
+	    .dropdown-toggle {
+	      position: absolute;
+	      top: 23px;
+	      left: 115px;
+	    }
+	  }
+		li:nth-child(7) a {
+	    @include green-button-nav();
+			&:hover {
+		    @include white-button-nav();
+		  }
+	  }
+		.current-menu-item {
+			color: $green;
+			padding-top: 1.375em;
+			margin-top: 0;
+			border-top: 2px solid $green;
+		}
+		ul {
+			display: none;
+			flex-direction: column;
+		}
 	}
-	.toggled-on ul,
-	.sub-menu.toggled-on {
-		display: flex;
-		flex-direction: column;
-		position: absolute;
-		width: 160px;
-		left: 0;
-		margin: 0;
-		margin-top: 24px;
-		padding: 0;
-		z-index: 1;
-		border-top: 2px solid $green;
-		li {
-			margin-left: 0.5em;
-			padding: 0.975em 0;
-			font-size: 85%;
-			background-color: $white;
-			border-bottom: 1px solid $very-light-grey;
+}
+.toggled-on ul,
+.sub-menu.toggled-on {
+	display: flex;
+	flex-direction: column;
+	position: absolute;
+	width: 160px;
+	left: 0;
+	margin: 0;
+	margin-top: 24px;
+	padding: 0;
+	z-index: 1;
+	border-top: 2px solid $green;
+	li {
+		margin-left: 0.5em;
+		padding: 0.975em 0;
+		font-size: 85%;
+		background-color: $white;
+		border-bottom: 1px solid $very-light-grey;
+		&:hover {
+			border: none;
+			background-color: $light-green;
+		}
+		a {
+			background: none;
 			&:hover {
 				border: none;
-				background-color: $light-green;
-			}
-			a {
-				background: none;
-				&:hover {
-					border: none;
-					color: $dark-grey;
-				}
+				color: $dark-grey;
 			}
 		}
 	}
 }
 
-/* ------ smaller screens ? (Morten's) ------ */
+/* ------ Smaller screens (< 800px) ------ */
 @media screen and (max-width: $query__medium-large) {
 	.main-navigation {
 		ul {
